Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-55600

[CDC] KV is reporting wrong item count. Actual Item count gets incremented by number of collections modified

    XMLWordPrintable

Details

    Description

      + Steps to Recreate:+

      1. Create a 3 node cluster
      2. Create a magma buckets with (history_retention_collection_default=true,bucket_history_retention_seconds=86400,bucket_history_retention_bytes=96636764160, magma_key_tree_data_block_size=131072,magma_seq_tree_data_block_size=9092) (vbuckets = 1, replicas = 2)
      3. Create five collections(total collections including default are six)
      4. Update collections(enable history on collections)
      5. Create 100 docs in each of the collections(total item count == 500)
      6. Upsert all the docs 2 times
      7. Sigkill memcached
      8. Seeing item count is 505 (verified on UI as well)

      Note:
      Seeing duplicate entries of each collection in magma dump(Duplicate entries exist before sigkill as well)

      Magma Dump Logs

      [root@sd1808-cnt7 ~]# /opt/couchbase/bin/magma_dump /data/default/magma.0 --kvstore 0 --docs-by-seq --history
      {"Key":{"Ascii":"   _collection","Hex":"0100085f636f6c6c656374696f6e","cid":8,"namespace":"system"},"Meta":{"CAS":1676441224391819264,"bySeqno":1,"deleted":false,"valueSize":64}}
      {"Key":{"Ascii":"   _collection","Hex":"0102085f636f6c6c656374696f6e","cid":8,"namespace":"system"},"Meta":{"CAS":1676441226451419136,"bySeqno":2,"deleted":false,"valueSize":72}}
      {"Key":{"Ascii":"   _collection","Hex":"0100095f636f6c6c656374696f6e","cid":9,"namespace":"system"},"Meta":{"CAS":1676441226549526528,"bySeqno":3,"deleted":false,"valueSize":64}}
      {"Key":{"Ascii":"   _collection","Hex":"0102095f636f6c6c656374696f6e","cid":9,"namespace":"system"},"Meta":{"CAS":1676441228613713920,"bySeqno":4,"deleted":false,"valueSize":72}}
      {"Key":{"Ascii":"   _collection","Hex":"01000a5f636f6c6c656374696f6e","cid":10,"namespace":"system"},"Meta":{"CAS":1676441228704546816,"bySeqno":5,"deleted":false,"valueSize":64}}
      {"Key":{"Ascii":"   _collection","Hex":"01020a5f636f6c6c656374696f6e","cid":10,"namespace":"system"},"Meta":{"CAS":1676441230769324032,"bySeqno":6,"deleted":false,"valueSize":72}}
      {"Key":{"Ascii":"   _collection","Hex":"01000b5f636f6c6c656374696f6e","cid":11,"namespace":"system"},"Meta":{"CAS":1676441230819590144,"bySeqno":7,"deleted":false,"valueSize":64}}
      {"Key":{"Ascii":"   _collection","Hex":"01020b5f636f6c6c656374696f6e","cid":11,"namespace":"system"},"Meta":{"CAS":1676441232881025024,"bySeqno":8,"deleted":false,"valueSize":72}}
      {"Key":{"Ascii":"   _collection","Hex":"01000c5f636f6c6c656374696f6e","cid":12,"namespace":"system"},"Meta":{"CAS":1676441232933978112,"bySeqno":9,"deleted":false,"valueSize":64}}
      {"Key":{"Ascii":"   _collection","Hex":"01020c5f636f6c6c656374696f6e","cid":12,"namespace":"system"},"Meta":{"CAS":1676441234991939584,"bySeqno":10,"deleted":false,"valueSize":72}}
       
      [root@sd1808-cnt7 ~]# /opt/couchbase/bin/magma_dump /data/default/magma.0 --kvstore 0 --docs-by-key | wc -l
      510
       
      [root@sd1808-cnt7 ~]# /opt/couchbase/bin/magma_dump /data/default/magma.0 --kvstore 0 --docs-by-seq --history | wc -l
      1510
      

      QE-TEST:

      guides/gradlew --refresh-dependencies testrunner -P jython=/opt/jython/bin/jython -P 'args=-i /tmp/temp_vol_3.ini bucket_storage=magma,bucket_ram_quota=256,init_loading=False,bucket_eviction_policy=fullEviction,rerun=False -t storage.magma.cdc_steady_state.SteadyStateTests.test_history_retention_for_n_update_iterations,nodes_init=3,skip_cleanup=True,num_items=100,doc_size=1024,batch_size=1000,sdk_timeout=60,log_level=info,infra_log_level=info,key_size=22,num_collections=6,ops_rate=20000,key_type=RandomKey,vbuckets=1,replicas=2,test_itr=2,bucket_history_retention_seconds=86400,bucket_history_retention_bytes=96636764160,standard_buckets=1,magma_buckets=1,num_scopes=1'
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ankush.sharma Ankush Sharma
            ankush.sharma Ankush Sharma
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty