MB-55600: Count system events when warming up to correct item count

With the addition of collection modify event the existing code for
adjusting the vbucket item count no longer works, modify events
aren't accounted for.

To simplify and future proof the item count adjustment (we have always
hidden that system events exist) use getRange to count the system event
key range, and just subtract that value.

Change-Id: If0a5d7073ad025f8e8cd875d8650b53b2c726d88
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/186912
Well-Formed: Restriction Checker
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Tested-by: Jim Walker <jim@couchbase.com>